argocd/config-examples/edge/argocd-vs-80.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argo-vs-80
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /argo
      options:
        prefixRewrite: /argo
      routeAction:
        single:
          upstream:
            name: argocd-argocd-server-80
            namespace: gloo-system
